Adding Codepen icon to About Me section

--- a/index.html
+++ b/index.html
@@ -210,6 +210,15 @@
                       <li>
                         <a
                           class="tip social-button"
+                          href="https://codepen.io/maig0818"
+                          title="CodePen"
+                          target="_blank"
+                          ><i class="fa fa-codepen"></i
+                        ></a>
+                      </li>
+                      <li>
+                        <a
+                          class="tip social-button"
                           href="https://www.linkedin.com/in/maig/"
                           title="Linkedin"
                           target="_blank"
