download Resume button label changed

--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@
 												class="button"
 												href="/files/Resume MAIG.pdf"
 												download
-												>Download CV</a
+												>Download Resume</a
 											>
 										</div>
 									</div>
