--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 											>
 												<h5 class="event-date">2021</h5>
 												<h4 class="event-name">
-													Master's degree in Software
+													Master's in Software
 													Engineering and Computer
 													Systems
 												</h4>
@@ -327,8 +327,9 @@
 											>
 												<h5 class="event-date">2019</h5>
 												<h4 class="event-name">
-													Digital Systems and Robotics
-													Engineering degree
+													Bachelor's in Digital
+													Systems and Robotics
+													Engineering
 												</h4>
 												<span class="event-description"
 													>Tecnológico de
